# spyx

./: .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  mkdocs.yml  optional_requirements.txt  pyproject.toml  requirements.txt  setup.py  working_12_3.txt
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/skills/: add-neuron-model.md  cut-release.md  debug-training.md  new-experiment.md  nir-export.md  promote-finding.md  quantize-model.md  research-scout.md  research-study.md  run-tutorial.md  sequence-models.md  setup-gpu.md  smoke-check.md  snn-primer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  python-package.yml  python-publish.yml
docs/: .conf.py.swp  api.md  conf.py  index.md  index.rst  introduction.md  introduction.rst  quickstart.md  quickstart.rst  requirements.txt
docs/examples/neuroevolution/: cartpole_evo.ipynb
docs/examples/nir/: braille_subtract_spyx.ipynb  conversion.ipynb  lif_snntorch.ipynb  lif_spyx.ipynb  nir_example.ipynb  nmnist_spyx.ipynb  scnn_mnist.nir
docs/examples/phasor/: phasor_intro.ipynb
docs/examples/quantization/: qat_intro.ipynb
docs/examples/ssm/: ssm_intro.ipynb
docs/examples/surrogate_gradient/: SurrogateGradientTutorial.ipynb  shd_eprop.ipynb  shd_sg_neuron_model_comparison.ipynb  shd_sg_surrogate_comparison.ipynb  shd_sg_template.ipynb
docs/explanation/: choosing-an-approach.md  design.md  glossary.md  parallel-spiking-neurons.md  research.md  snn-primer.md  substrate-and-the-hardware-lottery.md  surrogate-gradients-and-gaussian-smoothing.md  training-methods.md
docs/how-to/: benchmarking.md  deploy.md  install.md  load-data.md  migrate-haiku-to-nnx.md  nir.md  onnx.md  quantize.md  quickstart.md  recurrent-layers.md  train.md
docs/reference/: axn.md  bench.md  data.md  experimental.md  fn.md  nir.md  nn.md  onnx.md  optimize.md  phasor.md  quant.md  ssm.md
docs/source/api/: activation.rst  axn.rst  data.rst  fn.rst  loss.rst  nn.rst
docs/tutorials/: first-snn.md
examples/neuroevolution/: cartpole_evo.ipynb  hyper_mnist_evo.ipynb  mnist_evo.ipynb  mnist_evo_acc.ipynb  mnist_evo_regularized.ipynb  shd_evo_CRFMNES.ipynb
examples/reservoir_computing/: nmnist_rc.ipynb
examples/surrogate_gradient/: mnist_sg.ipynb  nmnist_sg.ipynb  shd_sg-ALIF-700.ipynb  shd_sg-ALIF.ipynb  shd_sg-RLIF-conv-aug.ipynb  shd_sg-RLIF-regularization_plus_optimizer_tuning.ipynb  shd_sg.ipynb  shd_sg_neuron_model_comparison.ipynb  shd_sg_surrogate_comparison.ipynb
research/: BACKLOG.md  FINDINGS.md  PROGRAM.md  PROMOTION.md  README.md  nmnist_evo_lmmaes.ipynb  nmnist_sg_ste.ipynb  shd_sg_neuron_model_comparison.ipynb  shd_sg_optimizer_choice.ipynb
research/SPSN/: SHD_jax_SPSN.ipynb
research/_template/: README.md
research/benchmarking/: NMNIST_torch.ipynb  SHD_comparison.ipynb  SHD_jax.ipynb  SHD_mlgenn.ipynb  SHD_torch.ipynb
research/extensions/: README.md
research/misc/: dev.ipynb  experimental.ipynb  nmnist_evo_crfmnes.ipynb  nmnist_evo_lmmaes.ipynb  nmnist_sg_arctan.ipynb  nmnist_sg_ste.ipynb  shd_evo_128c_64h.ipynb  shd_sg_128c_64h.ipynb  shd_sg_neuron_model_comparison.ipynb  shd_sg_surrogate_comparison.ipynb
research/new/: README.md
research/new/activation_packing/: README.md  activation_packing_bench.py  activation_packing_results.json
research/new/es_meta_plasticity_scout/: README.md
research/new/fp4_spiking_qat/: README.md  fp4_spiking_qat.py  fp4_spiking_qat_results.json
research/new/fp4_spiking_qat_hard/: README.md  hard_shd.py  hard_shd_results.json
research/new/honest_energy_accounting/: README.md  honest_energy.py  honest_energy_results.json
research/new/hybrid_evo_surrogate/: README.md  methods_0_1_hybrid.py  methods_results.json  methods_shd.py  methods_shd_cmaes.py  methods_shd_crfmnes.py  methods_shd_hyper.py  methods_shd_jit.py  methods_shd_population.py  methods_shd_solvers.py  run.py  shd_cmaes_results.json  shd_crfmnes_results.json  shd_hyper_results.json  (+6 more)
research/pallas/: aot.ipynb
research/paper/: NMNIST_jax.ipynb  NMNIST_jax_refined.ipynb  NMNIST_jax_test.ipynb  NMNIST_mlgenn.ipynb  NMNIST_spikingjelly.ipynb  NMNIST_torch.ipynb  SHD_jax.ipynb  SHD_mlgenn.ipynb  SHD_norse.ipynb  SHD_spikingjelly.ipynb  SHD_torch.ipynb  spyx_shd.nir
research/reproductions/: README.md
research/scaling_experiments/: shd_sg_128c-1024t.ipynb  shd_sg_128c-128t.ipynb  shd_sg_128c-256t.ipynb  shd_sg_128c-512t.ipynb  shd_sg_256c-1024t.ipynb  shd_sg_256c-128t.ipynb  shd_sg_256c-256t.ipynb  shd_sg_256c-512t.ipynb  shd_sg_384c-1024t.ipynb  shd_sg_384c-128t.ipynb  shd_sg_384c-256t.ipynb  shd_sg_384c-512t.ipynb  shd_sg_512c-1024t.ipynb  shd_sg_512c-128t.ipynb  shd_sg_512c-256t.ipynb  shd_sg_512c-512t.ipynb  shd_sg_640c-1024t.ipynb  shd_sg_640c-128t.ipynb  shd_sg_640c-256t.ipynb  shd_sg_640c-512t.ipynb  shd_sg_700c-1024t.ipynb  shd_sg_700c-128t.ipynb  shd_sg_700c-256t.ipynb  shd_sg_700c-512t.ipynb  shd_sg_72c-1024t.ipynb  shd_sg_72c-128t.ipynb  shd_sg_72c-256t.ipynb  shd_sg_72c-512t.ipynb
scripts/: check_install.py  phasor_demo.py  release.py  smoke_notebook_apis.py  ssm_demo.py
specs/: spyx_modernization_plan.md
spyx/: __init__.py  activation.py  actv.py  axn.py  data.py  experimental.py  fn.py  grain_loaders.py  loaders.py  loss.py  nir.py  nn.py
src/spyx/: __init__.py  _version.py  axn.py  bench.py  data.py  experimental.py  fn.py  loaders.py  nir.py  nn.py  optimize.py  phasor.py  quant.py  raven.py  ssm.py
tests/: __init__.py  conftest.py  shd.ipynb  test_axn.py  test_bench.py  test_compress.py  test_data_grain.py  test_eprop.py  test_feedback_alignment.py  test_fn.py  test_grain_loaders.py  test_hybrid.py  test_litert.py  test_loaders_grain.py  test_local_learning.py  test_matfree.py  test_networks.py  test_nir.py  test_nn_nnx.py  test_onnx.py  test_optimize.py  test_parallel_reset.py  test_phasor.py  test_psu_lif.py  test_quant.py  test_raven.py  test_resonate_fire.py  test_rf_ssm.py  test_sigma_delta.py  test_ssm.py  test_stateleaky_parity.py  test_stochastic.py  test_tonic_patch.py  test_ttt.py  test_zoo.py
(+69 files in other folders)
